--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ gitdb==4.0.10 ; python_version >= '3.7'
 gitpython==3.1.31 ; python_version >= '3.7'
 idna==3.4 ; python_version >= '3.5'
 importlib-metadata==6.6.0 ; python_version >= '3.7'
+importlib-resources==5.12.0
 jinja2==3.1.2 ; python_version >= '3.7'
 jsonschema==4.17.3 ; python_version >= '3.7'
 kiwisolver==1.4.4 ; python_version >= '3.7'
